# oir-kernel

./: CITATION.cff  LICENSE  README.md  oir_core.py  pyproject.toml
examples/: bench_chsh.py  chsh_s.py  chsh_test.py  ghz_test.py  run_all.py
src/oir/: __init__.py  cli.py  core.py
